[workspace]
default-members = ["bin/ream"]
members = [
    "bin/ream",
    "crates/common/account_manager",
    "crates/common/api_types/beacon",
    "crates/common/api_types/common",
    "crates/common/api_types/lean",
    "crates/common/chain/beacon",
    "crates/common/chain/lean",
    "crates/common/checkpoint_sync",
    "crates/common/consensus/beacon",
    "crates/common/consensus/lean",
    "crates/common/consensus/misc",
    "crates/common/events/beacon",
    "crates/common/execution_engine",
    "crates/common/executor",
    "crates/common/fork_choice/beacon",
    "crates/common/fork_choice/lean",
    "crates/common/light_client",
    "crates/common/metrics",
    "crates/common/network_spec",
    "crates/common/node",
    "crates/common/operation_pool",
    "crates/common/polynomial_commitments",
    "crates/common/sync",
    "crates/common/validator/beacon",
    "crates/common/validator/lean",
    "crates/crypto/bls",
    "crates/crypto/keystore",
    "crates/crypto/merkle",
    "crates/crypto/post_quantum",
    "crates/networking/discv5",
    "crates/networking/manager",
    "crates/networking/network_state/lean",
    "crates/networking/p2p",
    "crates/networking/peer",
    "crates/networking/syncer",
    "crates/rpc/beacon",
    "crates/rpc/common",
    "crates/rpc/lean",
    "crates/runtime",
    "crates/storage",
    "testing/beacon-api",
    "testing/ef-tests",
    "testing/gossip-validation",
    "testing/lean-spec-tests",
]
resolver = "2"
exclude = ["book/cli"]

[workspace.package]
authors = ["https://github.com/ReamLabs/ream/graphs/contributors"]
edition = "2024"
keywords = [
    "ethereum",
    "beam-chain",
    "blockchain",
    "consensus",
    "protocol",
    "ream",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReamLabs/ream"
rust-version = "1.88.0"
version = "0.1.0"

[workspace.lints.clippy]
let_and_return = "warn"
uninlined_format_args = "warn"
unnecessary_debug_formatting = "warn"
unwrap_used = "warn"
useless_let_if_seq = "warn"
wildcard_imports = "warn"

[workspace.dependencies]
actix-web = "4.11.0"
actix-web-lab = "0.24.3"
aes = "0.8.4"
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", features = ['serde'] }
alloy-rlp = { version = "0.3.12", default-features = false, features = ["derive"] }
alloy-rpc-types-beacon = "1.0.41"
alloy-rpc-types-eth = "1.0.41"
anyhow = "1.0.100"
async-trait = "0.1.89"
bip39 = { version = "2.2.0", features = ["rand"] }
clap = "4.5.50"
const-hex = "1.17"
delay_map = "0.4.1"
directories = { version = "6.0.0" }
discv5 = { version = "0.10.2", features = ["libp2p"] }
enr = "0.13.0"
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing.git", rev = "c14a9ad96436e6b8b631faf49a3666e4558b71ae" }
ethereum_serde_utils = "0.8"
ethereum_ssz = "0.10"
ethereum_ssz_derive = "0.10"
eventsource-client = "0.15.1"
futures = "0.3"
hashbrown = "0.16.0"
itertools = "0.14"
jsonwebtoken = "9.3.1"
kzg = { git = "https://github.com/grandinetech/rust-kzg" }
lazy_static = "1.5.0"
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "f10dcbefac2502d356d93f686e8b4ecd8dc8840a" }
libp2p = { version = "0.56", default-features = false, features = ["identify", "yamux", "noise", "dns", "serde", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "gossipsub", "ping"] }
libp2p-identity = "0.2.12"
libp2p-mplex = "0.43.1"
lru = "0.16.2"
parking_lot = "0.12.5"
prometheus_exporter = { git = "https://github.com/AlexanderThaller/prometheus_exporter", rev = "c49efe614486f998b20eb410ae0caf3e904cf540" }
rand = "0.9"
rand_chacha = "0.9"
redb = "3.1.0"
reqwest = { version = "0.12.24", features = ["native-tls-vendored", "json"] }
rstest = "0.26.1"
rust-kzg-blst = { git = 'https://github.com/grandinetech/rust-kzg.git' }
serde = { version = '1.0', features = ['derive', "rc"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sha2 = "0.10.9"
snap = "1.1"
ssz_types = { git = "https://github.com/sigp/ssz_types.git", rev = "5dc2d521ed31f8e38b0065a80bf98af55aac06f8" }
tempdir = "0.3.7"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "signal", "time", "macros"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
tree_hash = "0.12"
tree_hash_derive = "0.12"
unicode-normalization = "0.1.24"
url = "2.5.7"

# ream dependencies
ream-account-manager = { path = "crates/common/account_manager" }
ream-api-types-beacon = { path = "crates/common/api_types/beacon" }
ream-api-types-common = { path = "crates/common/api_types/common" }
ream-api-types-lean = { path = "crates/common/api_types/lean" }
ream-bls = { path = "crates/crypto/bls", features = ["zkcrypto"] } # Default feature is zkcrypto
ream-chain-beacon = { path = "crates/common/chain/beacon" }
ream-chain-lean = { path = "crates/common/chain/lean" }
ream-checkpoint-sync = { path = "crates/common/checkpoint_sync" }
ream-consensus-beacon = { path = "crates/common/consensus/beacon" }
ream-consensus-lean = { path = "crates/common/consensus/lean" }
ream-consensus-misc = { path = "crates/common/consensus/misc" }
ream-discv5 = { path = "crates/networking/discv5" }
ream-events-beacon = { path = "crates/common/events/beacon" }
ream-execution-engine = { path = "crates/common/execution_engine" }
ream-executor = { path = "crates/common/executor" }
ream-fork-choice-beacon = { path = "crates/common/fork_choice/beacon" }
ream-fork-choice-lean = { path = "crates/common/fork_choice/lean" }
ream-keystore = { path = "crates/crypto/keystore" }
ream-light-client = { path = "crates/common/light_client" }
ream-merkle = { path = "crates/crypto/merkle" }
ream-metrics = { path = "crates/common/metrics" }
ream-network-manager = { path = "crates/networking/manager" }
ream-network-spec = { path = "crates/common/network_spec" }
ream-network-state-lean = { path = "crates/networking/network_state/lean" }
ream-node = { path = "crates/common/node" }
ream-operation-pool = { path = "crates/common/operation_pool" }
ream-p2p = { path = "crates/networking/p2p" }
ream-peer = { path = "crates/networking/peer" }
ream-polynomial-commitments = { path = "crates/common/polynomial_commitments" }
ream-post-quantum-crypto = { path = "crates/crypto/post_quantum" }
ream-rpc-beacon = { path = "crates/rpc/beacon" }
ream-rpc-common = { path = "crates/rpc/common" }
ream-rpc-lean = { path = "crates/rpc/lean" }
ream-storage = { path = "crates/storage" }
ream-sync = { path = "crates/common/sync" }
ream-syncer = { path = "crates/networking/syncer" }
ream-validator-beacon = { path = "crates/common/validator/beacon" }
ream-validator-lean = { path = "crates/common/validator/lean" }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing.git" }

[profile.test]
inherits = "release"
